changes made in p tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>hello world!!!!</p>
-    <p>this is a new feature</p>
+    <p>this is a new feature(hello)</p>
     <h1>hey</h1>
 </body>
 </html>
